--- a/src/style/elements/links.scss
+++ b/src/style/elements/links.scss
@@ -1,6 +1,13 @@
 a {
+    transition: color 200ms ease-in-out;
+
     &:active,
+    &:focus,
     &:visited {
-        color: purple;
+        color: theme-color(default-text-color);
+    }
+
+    &:hover {
+        color: theme-color(primary)
     }
 }
