--- a/src/style/lib/responsive.scss
+++ b/src/style/lib/responsive.scss
@@ -1,13 +1,7 @@
 $responsive-include: 0 !default;
 $responsive-include-count: $responsive-include + 1;
-/**
- * Responsive.scss
- * #{$responsive-include-count}
- */
 
-///
-/// Breakpoints
-///
+
 $breakpoints: (
   //   xxxs: 375px,
   //   xxs: 425px,
@@ -20,11 +14,9 @@ $breakpoints: (
   //   xxxl: 1920px
 ) !default;
 
-///
 /// Return media query around given content.
 /// @param {string} $type The breakpoint name
-///
-@mixin respond($type: desktop) {
+@mixin respond($type: xl) {
   @if map-has-key($breakpoints, $type) {
     @media only screen and (min-width: map_get($breakpoints, $type)) {
       @content;
@@ -32,10 +24,8 @@ $breakpoints: (
   }
 }
 
-///
 /// Return media query around given content.
 /// @param {string} $type The breakpoint name
-///
 @mixin respond-max($type: desktop) {
   @if map-has-key($breakpoints, $type) {
     @media only screen and (max-width: map_get($breakpoints, $type) - 1px) {
@@ -44,18 +34,14 @@ $breakpoints: (
   }
 }
 
-///
 /// Return media query around given content.
-///
 @mixin respond-print() {
   @media print {
     @content;
   }
 }
 
-///
 /// Return media query for IE browsers.
-///
 @mixin respond-IE() {
   @media all and (-ms-high-contrast: none) {
     @content;
