fix edges on curves by removing npoints from greatcircle, remove dead code from map

--- a/src/views/Home.scss
+++ b/src/views/Home.scss
@@ -21,3 +21,14 @@
     }
   }
 }
+
+.home-section--about {
+    position: relative;
+
+    .home-section_map {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+}
