--- a/src/components/map/map.scss
+++ b/src/components/map/map.scss
@@ -1,10 +1,12 @@
 @import '~@/style/variables.scss';
 
+$map-background: transparent !default; 
+$svg-stroke-animation-color: theme-color(primary) !default;
+
 .game-map {
-  background: #fff;
-  width:100%;
+  background: $map-background;
+  width: 100%;
   height: 100%;
-  position: fixed;
   left: 0;
 
   svg {
@@ -24,32 +26,22 @@
 }
 
 .animated-map {
-  top: 0;
-  position: fixed;
   z-index: -1;
 
   svg {
     opacity: 1;
   }
 
-  text {
-    display: none;
+  .flight-route {
+      stroke: transparent;
+      fill: transparent;
   }
-  
-  .point {
-    display: none;
-  }
-  
-  .polygon {
-    stroke: transparent;
-    fill: transparent;
-  }
-  
+
   .svg-path-animation--start {
-    stroke: #fff;
-    stroke-width: 1;
+    stroke: $svg-stroke-animation-color;
+    stroke-width: 7500;
     animation-name: draw;
-    animation-duration: 1s;
+    animation-duration: 3s;
     animation-fill-mode: forwards; // Stay on the last frame
     animation-iteration-count: 1; // Run only once
     animation-timing-function: linear;
