Mobile update and fixes.

--- a/src/components/link-custom/link-custom.scss
+++ b/src/components/link-custom/link-custom.scss
@@ -2,6 +2,12 @@
 
 .link-custom {
     a {
-        color: inherit;
+        &, &:visited, &:focus, &:active {
+            color: inherit;
+        }
+
+        &:hover {
+            color: theme-color(primary);
+        }
     }
 }
