--- a/src/App.scss
+++ b/src/App.scss
@@ -3,10 +3,18 @@
 @import './style/reset';
 @include import-fonts($fonts-location);
 @import './style/elements';
+@import './style/components/lists';
 @import './style/generation';
 
 .container {
-    max-width: 1440px;
+    max-width: 100%;
     text-align: center;
     margin: 0 auto;
+    padding: 0;
+    width: 100%;
+    overflow-x: hidden;
+
+    @include respond(lg) {
+        max-width: 1440px;
+    }
 }
