--- a/src/views/Home.scss
+++ b/src/views/Home.scss
@@ -1,18 +1,36 @@
 @import '~@/style/variables';
 
 .home-section {
-  min-height: calc(100vh - 60px);
+  display: flex;
+  min-height: calc(100vh - 44px);
 }
 
 .card {
+  // is actually the image container :(
   &_image {
-    height: 200px;
+    min-height: 45vh;
     width: 100%;
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     overflow: hidden;
+
+    img {
+      height: 100%;
+      width: auto;
+      max-width: none;
+      position: absolute;
+    }
+
+    @include respond(md) {
+      min-height: 200px; 
+
+      img {
+        height: auto;
+        width: 100%;
+      }
+    }
   }
 
   &_text {
