Add screensize, scroll behavior and resize utilities

--- a/src/style/components/lists.scss
+++ b/src/style/components/lists.scss
@@ -2,4 +2,10 @@
     &.no-bullets {
         list-style-type: none;
     }
+
+    &.equal-height {
+        li {
+            min-height: 20px;
+        }
+    }
 }
