--- a/src/sections/MobileDrawer/MobileDrawer.scss
+++ b/src/sections/MobileDrawer/MobileDrawer.scss
@@ -39,6 +39,9 @@ $desktop-drawer-background: transparent;
     &_content {
         padding: 20px;
         position: relative;
+        display: flex;
+        flex-direction: column;
+        height: 100%;
 
         @include respond(lg) {
             padding: 0;
@@ -46,13 +49,12 @@ $desktop-drawer-background: transparent;
 
         &::before {
             content: '';
-            
             position: absolute;
             right: 30px;
             left: 30px;
             top: auto;
-            height: 2px;
-            background: darken(theme-color(primary), 20%);
+            height: 1px;
+            background: rgba(theme-color(grey-3), .5);
 
             @include respond(lg) {
                 display: none;
