--- a/src/components/map/map.scss
+++ b/src/components/map/map.scss
@@ -5,13 +5,20 @@ $svg-stroke-animation-color: theme-color(primary) !default;
 
 .game-map {
   background: $map-background;
-  width: 100%;
+  // width: 100%;
   height: 100%;
+  width: auto;
+  overflow-x: hidden;
   left: 0;
 
   svg {
-    width:100%;
+    width: auto;
     height: 100%;
+
+    // @include respond(lg) {
+    //   width: 100%;
+    //   height: auto;
+    // }
   }
 
   text,
