--- a/src/views/Home.scss
+++ b/src/views/Home.scss
@@ -43,8 +43,18 @@
 .home-section--about {
     position: relative;
 
+    .home-section_map-container {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+    }
+
     .home-section_map {
         position: absolute;
+        width: 100%;
+        height: 100%;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
