--- a/src/components/map/map.scss
+++ b/src/components/map/map.scss
@@ -8,7 +8,7 @@ $svg-stroke-animation-color: theme-color(primary) !default;
   // width: 100%;
   height: 100%;
   width: auto;
-  overflow-x: hidden;
+  overflow: hidden;
   left: 0;
 
   svg {
