--- a/next-implementation/pages/index.module.scss
+++ b/next-implementation/pages/index.module.scss
@@ -7,12 +7,13 @@
 
   &__about {
     position: relative;
-    #{$context-class}_map-container {
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-    }
+  }
+
+  &_map-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
   }
 }
